# sprinter-app

./: CLAUDE.md  LICENSE  index.html  package.json
.beads/: metadata.json
src/: App.tsx  diffStore.ts  index.css  issueStore.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/sprinter-common/: Cargo.toml
src-tauri/crates/sprinter-common/src/: db.rs  models.rs
src-tauri/crates/sprinter-daemon/: Cargo.toml
src-tauri/crates/sprinter-daemon/src/: executor.rs  lifecycle.rs  main.rs  server.rs
src-tauri/crates/sprinter-proto/: Cargo.toml  build.rs
src-tauri/crates/sprinter-proto/src/: lib.rs
src-tauri/crates/sprinter-simulate/: Cargo.toml
src-tauri/crates/sprinter-simulate/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/proto/: command_service.proto
src-tauri/src/: daemon_manager.rs  grpc_client.rs  lib.rs  main.rs
src/components/: CommandDetail.tsx  CommandHeader.tsx  CommandInput.tsx  CommandList.tsx  CommandListItem.tsx  CommandOutput.tsx  CommandTimer.tsx  ViewNav.tsx
src/components/diff/: DiffConfig.tsx  DiffEditorPanel.tsx  DiffFileList.tsx  DiffFileListItem.tsx  DiffViewer.tsx  StackedDiffView.tsx
src/components/issue/: IssueDetail.tsx  IssueHoverCard.tsx  IssueInput.tsx  IssueList.tsx  IssueViewer.tsx  TranscriptTab.tsx
src/components/ui/: badge.tsx
src/hooks/: useEventListeners.ts
src/lib/: beads.ts  command.ts  git.ts  tauri.ts
