[workspace]
members = [
    ".",
    "crates/sprinter-proto",
    "crates/sprinter-common",
    "crates/sprinter-daemon",
    "crates/sprinter-simulate",
]
resolver = "2"

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
async-stream = "0.3"

[package]
name = "sprinter-app"
version = "0.1.0"
description = "A Sprinter Van Full of Agents"
authors = ["you"]
edition = "2021"

[lib]
name = "sprinter_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
sprinter-proto = { path = "crates/sprinter-proto" }
sprinter-common = { path = "crates/sprinter-common" }
libc = "0.2"

