[package]
name = "sprinter-common"
version = "0.1.0"
edition = "2021"

[dependencies]
sprinter-proto = { path = "../sprinter-proto" }
rusqlite = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
