[package]
name = "sprinter-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sprinter-daemon"
path = "src/main.rs"

[dependencies]
sprinter-proto = { path = "../sprinter-proto" }
sprinter-common = { path = "../sprinter-common" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = "0.7"
async-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
nix = { version = "0.29", features = ["signal", "process"] }
